Fix dark mode nav bar error (#37)
* Home Page

* Update about us and Add Features Section

* Fix mechanic and vehicle owner

* Update Mechanic Page

* Update Shop Page and Develop Modify Page

* Fix dark mode nav bar error

* Fix error

---------

--- a/vehicle_owner/about/style.css
+++ b/vehicle_owner/about/style.css
@@ -58,6 +58,14 @@ nav ul {
   padding: 0; 
 }
 
+body.dark-mode ul li a{
+  color: white;
+}
+
+body.dark-mode nav ul li a::before {
+  background-color: #ffffff; 
+}
+
 nav ul li {
   margin-left: 30px;
   position: relative; 
