--- a/vehicle_owner/mech/style.css
+++ b/vehicle_owner/mech/style.css
@@ -24,6 +24,14 @@ body {
     margin-top: 50px;
 }
 
+body.dark-mode ul li a{
+    color: white;
+}
+
+body.dark-mode nav ul li a::before {
+    background-color: #ffffff; 
+}
+
 .topic {
     max-width: 60%;
     margin-left: 50px;
